--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -40,6 +40,7 @@
                     <div class="newversion">2.05</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">选中按钮也会有悬停效果</div>
+                    <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
                     <div class="newfunc-list">文件粉碎</div>
                     <div class="newfunc-list">后台扫描多线程</div>
                     <div class="newfunc-list">部分组件支持unicode</div>
