--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -42,6 +42,7 @@
                     <div class="newfunc-list">选中按钮也会有悬停效果</div>
                     <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
                     <div class="newfunc-list">文件粉碎</div>
+                    <div class="newfunc-list">确定取消支持语言包</div>
                     <div class="newfunc-list">脚本检测</div>
                     <div class="newfunc-list">启动时重置杀毒设置</div>
                     <div class="newfunc-list">后台扫描多线程</div>
