--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -52,11 +52,13 @@
                     <div class="newfunc-list">修改UI布局</div>
                     <div class="newfunc-list">升级信息框模块</div>
                     <div class="newfunc-list">检测其它杀软的运行，如果检测到就会关闭主防，目前支持6款杀软</div>
+                    <div class="newfunc-list">由于网络库太容易误报，将改成“本地库”</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">在使用中文时文字显示可能会异常（修复一半）</div>
                     <div class="newfunc-list">分配XXX字节内存失败（已修复）</div>
                     <div class="newfunc-list">[紧急]病毒文件无法删除（已修复）</div>
                     <div class="newfunc-list">多次显示同一个文件（已修复）</div>
+                    <div class="newfunc-list">使用任务管理器最大化（已修复）</div>
                     <div class="newfunc-list">其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</div>
                     </div>
                 </div>
