--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -15,6 +15,7 @@
     <title>xdows安全-支持</title>
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/download.css">
+    <link rel="stylesheet" href="./../css/support.css">
 </head>
 
 <body>
