--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -42,6 +42,7 @@
                     <div class="newfunc-list">选中按钮也会有悬停效果</div>
                     <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
                     <div class="newfunc-list">文件粉碎</div>
+                    <div class="newfunc-list">全新关闭软件弹窗</div>
                     <div class="newfunc-list">CPU占用管理</div>
                     <div class="newfunc-list">MBR防护（没测试）</div>
                     <div class="newfunc-list">确定取消支持语言包</div>
