--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -44,7 +44,7 @@
                     <div class="newfunc-list">文件粉碎</div>
                     <div class="newfunc-list">全新关闭软件弹窗</div>
                     <div class="newfunc-list">CPU占用管理</div>
-                    <div class="newfunc-list">MBR防护（没测试）</div>
+                    <div class="newfunc-list">MBR防护</div>
                     <div class="newfunc-list">确定取消支持语言包</div>
                     <div class="newfunc-list">脚本检测</div>
                     <div class="newfunc-list">启动时重置杀毒设置</div>
