--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -51,6 +51,7 @@
                     <div class="newfunc-list">后台扫描多线程</div>
                     <div class="newfunc-list">部分组件支持unicode</div>
                     <div class="newfunc-list">公用桌面后台扫描</div>
+                    <div class="newfunc-list">信息框支持深色模式</div>
                     <div class="newfunc-list">修改UI布局</div>
                     <div class="newfunc-list">升级信息框模块</div>
                     <div class="newfunc-list">检测其它杀软的运行，如果检测到就会关闭主防，目前支持6款杀软</div>
