--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -44,6 +44,8 @@
                     <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
                     <div class="newfunc-list">文件粉碎</div>
                     <div class="newfunc-list">全新关闭软件弹窗</div>
+                    <div class="newfunc-list">CPU占用优化</div>
+                    <div class="newfunc-list">更改快速扫描方式</div>
                     <div class="newfunc-list">CPU占用管理</div>
                     <div class="newfunc-list">MBR防护</div>
                     <div class="newfunc-list">确定取消支持语言包</div>
