--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -13,31 +13,8 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 2.04</div>
+                <div class="newversion">最新版本 2.05</div>
                 <div class="newfunc">
-                    <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">新增反馈按钮</div>
-                    <div class="newfunc-list">网络库结束测试</div>
-                    <div class="newfunc-list">侧边条使用非线性运动</div>
-                    <div class="newfunc-list">最小化和关闭按钮新增悬停提示文本</div>
-                    <div class="newfunc-list">侧边按钮新增悬停效果</div>
-                    <div class="newfunc-list">更新日志浏览框的内核现在改为MiniBilnk内核</div>
-                    <div class="newfunc-list">杀毒显示已扫描文件数</div>
-                    <div class="newfunc-list">主防大增强</div>
-                    <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">在使用中文时文字显示可能会异常（未修复）</div>
-                    <div class="newfunc-list">语言包错误（已修复）</div>
-                </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">其它版本</div>
-            </div>
-            <div class="history-version-item">
-                <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">2.05版本[正在开发]<span class="arrow"></span></div>
-                <div class="history-version-item-content">
-                    <div class="newfunc">
-                    <div class="newversion">2.05</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">选中按钮也会有悬停效果</div>
                     <div class="newfunc-list">繁体中文</div>
@@ -66,6 +43,42 @@
                     <div class="newfunc-list">多次显示同一个文件（已修复）</div>
                     <div class="newfunc-list">使用任务管理器最大化（已修复）</div>
                     <div class="newfunc-list">其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.06版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.05</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">暂无</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">在使用中文时文字显示可能会异常（修复一半）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.04版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.04</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">新增反馈按钮</div>
+                    <div class="newfunc-list">网络库结束测试</div>
+                    <div class="newfunc-list">侧边条使用非线性运动</div>
+                    <div class="newfunc-list">最小化和关闭按钮新增悬停提示文本</div>
+                    <div class="newfunc-list">侧边按钮新增悬停效果</div>
+                    <div class="newfunc-list">更新日志浏览框的内核现在改为MiniBilnk内核</div>
+                    <div class="newfunc-list">杀毒显示已扫描文件数</div>
+                    <div class="newfunc-list">主防大增强</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">在使用中文时文字显示可能会异常（未修复）</div>
+                    <div class="newfunc-list">语言包错误（已修复）</div>
                     </div>
                 </div>
             </div>
