--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>XTY网站</title>
+  <title>XTY64XTY网站</title>
   <style>
     body {
       background-color: lightblue;
@@ -95,7 +95,7 @@
     }
   </style>
 </head>
-<h1>XTY的项目堆</h1>
+<h1>XTY64XTY的项目堆</h1>
 <body>
   <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
     <div style="width: 1200px; height: 800px; border-radius: 20px; background-color: lightblue; box-shadow: inset 0 0 20px black;">
