--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
   <div style="display: flex; align-items: center; justify-content: center; height: 100vh;">
     <div style="width: 1200px; height: 800px; border-radius: 20px; background-color: lightblue; box-shadow: inset 0 0 20px black;">
       
-<p style="color:white; font-size:30px; text-align:center;">XTY的主页</p>
+<p style="color:white; font-size:30px; text-align:center;">XTY64XTY的主页</p>
 <ul>
 <li><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io" class="github">GitHub</a></li>
 <li><a href="https://www.40code.com/#page=user&id=1603" class="code40">40code</a></li>
 <li><a href="https://space.bilibili.com/1208834427" class="bilibili">Bilibili</a></li>
 <li><a href="https://www.ccw.site/student/621189844daafc57cebf44fc" class="ccw">CCW</a></li>
 </ul>
-<p style="color:white; font-size:30px; text-align:center;">XTY的项目</p>
+<p style="color:white; font-size:30px; text-align:center;">XTY64XTY的项目</p>
 <ul>
 <li><a href="https://www.ccw.site/detail/62db45c379208777affc8b75" class="github">xdows4</a></li>
 <li><a href="https://www.ccw.site/detail/62c014bd988d2120dedded91" class="code40">xdows3</a></li>
