--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -41,9 +41,12 @@
                     </div>
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
-                        <div class="d-item-desc">XTY64XTY12345.github.io <span class="update-time"></span></div>
+                        <div class="d-item-desc">支持 Windows 7 以上的设备</div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
             </div>  
+
                     </div>
+   </div>  
             <div class="down-ietm windows">
                 <div class="down-ietm-inner">
                     <div class="logo-area">
@@ -52,7 +55,6 @@
                     <div class="info-area">
                         <div class="d-item-title">注意事项</div>
                         <div class="d-item-desc">1.0-1.53都将停止支持 <span class="update-time"></span></div>
-                        <div class="d-item-desc">不支持win7 <span class="update-time"></span></div>
                         <div class="d-item-desc">部分代码参考PYAS的代码 <span class="update-time"></span></div>
                         <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
                     </div>
