--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -42,7 +42,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
             </div>  
 
                     </div>
