--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -56,10 +56,12 @@
                     <div class="newversion">2.05</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化及增强主动防御</div>
+                    <div class="newfunc-list">进程管理增加右键菜单</div>
                     <div class="newfunc-list">主动防御终止进程增加提示</div>
                     <div class="newfunc-list">更新图标</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">在使用中文时文字显示可能会异常（已修复）</div>
+                    <div class="newfunc-list">进程管理关闭软件时即使按取消键也会关闭（已修复）</div>
                     </div>
                 </div>
             </div>
