--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -60,6 +60,19 @@
                     </div>
                 </div>
             </div>  
+            
+            <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">广告</div>
+                        <div class="d-item-desc">关于我同学收买我要我打广告这件事 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="./Dev/advertised.html" onClick="tcssReport('tim.downloads.windows');">打开广告</a></div>
+                    </div>
+                </div>
+            </div>  
             </div>
         </div>
     </div>
