--- a/xdows安全/Dev/advertised.html
+++ b/xdows安全/Dev/advertised.html
@@ -40,9 +40,9 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">最新版本</div>
-                        <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="d-item-title">游戏交流群</div>
+                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
+                        <div class="d-item-desc">群号：812015311</div>
             </div>  
 
                     </div>
@@ -53,10 +53,9 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">注意事项</div>
-                        <div class="d-item-desc">1.0-1.53都将停止支持 <span class="update-time"></span></div>
-                        <div class="d-item-desc">部分代码参考PYAS的代码 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
+                        <div class="d-item-title">游戏交流群</div>
+                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
+                        <div class="d-item-desc">群号：812015311</div>
                     </div>
                 </div>
             </div>  
@@ -67,9 +66,9 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">广告</div>
-                        <div class="d-item-desc">关于我同学收买我要我打广告这件事 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="./Dev/advertised.html" onClick="tcssReport('tim.downloads.windows');">打开广告</a></div>
+                        <div class="d-item-title">游戏交流群</div>
+                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
+                        <div class="d-item-desc">群号：812015311</div>
                     </div>
                 </div>
             </div>  
