--- a/xdows安全/Dev/advertised.html
+++ b/xdows安全/Dev/advertised.html
@@ -12,7 +12,7 @@
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
     <link rel="shortcut icon" href="./img/logo.ico" >
-    <title>xdows安全-下载</title>
+    <title>xdows安全-广告</title>
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/download.css">
 </head>
