--- a/xdows安全/Dev/advertised.html
+++ b/xdows安全/Dev/advertised.html
@@ -11,10 +11,10 @@
     <meta name="description" itemprop="description" content="xdows安全，你的全新杀毒软件" />
     <!--分享卡描述预埋meta-->
     <!--分享卡图片URL预埋meta-->
-    <link rel="shortcut icon" href="./img/logo.ico" >
+    <link rel="shortcut icon" href="./../img/logo.ico" >
     <title>xdows安全-广告</title>
-    <link rel="stylesheet" href="./css/public.css">
-    <link rel="stylesheet" href="./css/download.css">
+    <link rel="stylesheet" href="./../css/public.css">
+    <link rel="stylesheet" href="./../css/download.css">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
             </h1>
             <div class="nav">
                 <ul class="nav-ul">
-                    <li class="nav-item"><a href="./../">返回</a></li>
-                    <li class="nav-item"><a href="./index.html">首页</a></li>
-                    <li class="nav-item"><a href="./download.html" class="active">下载</a></li>
+                    <li class="nav-item"><a href="./../../">返回</a></li>
+                    <li class="nav-item"><a href="./../index.html">首页</a></li>
+                    <li class="nav-item"><a href="./../download.html" class="active">下载</a></li>
                 </ul>
             </div>
         </div>
