--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -56,6 +56,7 @@
                     <div class="newversion">2.05</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化及增强主动防御</div>
+                    <div class="newfunc-list">支持 Windows 7 系统</div>
                     <div class="newfunc-list">进程管理增加右键菜单</div>
                     <div class="newfunc-list">主动防御终止进程增加提示</div>
                     <div class="newfunc-list">更新关闭软件窗口</div>
