--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -62,6 +62,7 @@
                     <div class="newfunc-list">更新关闭软件窗口</div>
                     <div class="newfunc-list">更新图标</div>
                     <div class="newfunc-list">语言包新增信息</div>
+                    <div class="newfunc-list">增强脚本查杀（借鉴PYAS）</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">在使用中文时文字显示可能会异常（已修复）</div>
                     <div class="newfunc-list">托盘菜单提示错误显示（已修复）</div>
