--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -67,6 +67,7 @@
                     <div class="newfunc-list">在使用中文时文字显示可能会异常（已修复）</div>
                     <div class="newfunc-list">托盘菜单提示错误显示（已修复）</div>
                     <div class="newfunc-list">进程管理关闭软件时即使按取消键也会关闭（已修复）</div>
+                    <div class="newfunc-list">无法删除病毒文件（已修复）</div>
                     <div class="newfunc-title">注意事项：</div>
                     <div class="newfunc-list">由于语言包修改，请重新选择自己的语言</div>
                     <div class="newfunc-list">由于语言包修改，请替换配置文件</div>
