--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -61,7 +61,7 @@
                 </div>
             </div>  
             
-            <div class="down-ietm windows">
+            <!--<div class="down-ietm windows">
                 <div class="down-ietm-inner">
                     <div class="logo-area">
                         <div class="itemlogo"></div>
@@ -72,7 +72,7 @@
                         <div class="down-btn"><a href="./Dev/advertised.html" onClick="tcssReport('tim.downloads.windows');">打开广告</a></div>
                     </div>
                 </div>
-            </div>  
+            </div>  -->
             </div>
         </div>
     </div>
