--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -91,8 +91,8 @@
     </div>
     <div class="doc top-left" style="position:relative;">
         <div class="doc-inner">
-            <div class="second-title">进程管理</div>
-            <div class="second-desc">同步系统进程，终止进程，还可查看PID。</div>
+            <div class="second-title">主题设置</div>
+            <div class="second-desc">支持浅色和深色模式以及跟随系统。</div>
         </div>
         <div class="doc-bg doc3">
             <!-- <div class="date-mobile-msg"></div>
