--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -24,7 +24,7 @@
         <img src="./img/index-bg1.png" alt="" class="bg-img">
         <div class="banner1-info new">
             <div class="wording">
-                <div class="move-title">xdows安全<br>你的全新杀毒软件</div>
+                <div class="move-title">xdows安全<br>你的<div class="gradient1"><span>全新</span></div>杀毒软件</div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
                 <div class="move-down">
                     <a href="./download.html" class="move-down-a" onClick="tcssReport('tim.index.downbtn');">
@@ -60,7 +60,7 @@
             <div class="func-item">
                 <div class="func-logo2"></div>
                 <div class="func-title">云端杀毒</div>
-                <div class="func-desc">支持在国内两个服务器中查杀病毒，让你的电脑更加安全。</div>
+                <div class="func-desc">支持在两个服务器中查杀病毒，让你的电脑更加安全。</div>
             </div>
             <div class="func-item">
                 <div class="func-logo3"></div>
