--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -24,7 +24,11 @@
         <img src="./img/index-bg1.png" alt="" class="bg-img">
         <div class="banner1-info new">
             <div class="wording">
-                <div class="move-title">xdows安全<br>你的<div class="gradient1"><span>全新</span></div>杀毒软件</div>
+                <div class="move-title">
+                    xdows安全<br>你的
+                    <span class="gradient1"><span>全新</span>
+                    杀毒软件
+                </div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
                 <div class="move-down">
                     <a href="./download.html" class="move-down-a" onClick="tcssReport('tim.index.downbtn');">
