--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -26,7 +26,7 @@
             <div class="wording">
                 <div class="move-title">
                     xdows安全<br>你的
-                    <span class="gradient1"><span>全新</span>
+                    <span class="gradient1">全新</span>
                     杀毒软件
                 </div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
