--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -25,9 +25,10 @@
         <div class="banner1-info new">
             <div class="wording">
                 <div class="move-title">
-                    xdows安全<br>你的
-                    <div class="gradient1">全新</div>
-                    杀毒软件
+                    <div class="gradient1">
+                        <span>xdows安全</span>
+                    </div>
+                    <br>你的全新杀毒软件
                 </div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
                 <div class="move-down">
