--- a/xdows安全/index.html
+++ b/xdows安全/index.html
@@ -24,11 +24,7 @@
         <img src="./img/index-bg1.png" alt="" class="bg-img">
         <div class="banner1-info new">
             <div class="wording">
-                <div class="move-title">
-                    <div class="gradient1">
-                        <span>xdows安全</span>
-                    </div>
-                    <br>你的全新杀毒软件
+                <div class="move-title">xdows安全<br>你的全新杀毒软件
                 </div>
                 <div class="move-desc">支持清理加速、病毒查杀、工具箱等功能。</div>
                 <div class="move-down">
