--- a/Dev/xdows安全/开发人员名单.html
+++ b/Dev/xdows安全/开发人员名单.html
@@ -3,3 +3,21 @@
 <p>biliblili XTY64XTY a1b2c3ABC1231@outlook.com</p>
 <h4>预览成员</h4>
 <p>bilibili Winner 3579575125@qq.com</p>
+<div style="display: flex; justify-content: center;">
+  <button onclick="myFunction()">查看更多信息</button>
+</div>
+<p id="demo"></p>
+<script>
+function myFunction(){
+	var x;
+	var r=confirm("获取信息错误。检测到是因为版本过低，是否立即更新");
+	if (r==true){
+  window.open("./../../xdows安全/download.html", "_blank");
+		x="";
+	}
+	else{
+		x="";
+	}
+	document.getElementById("demo").innerHTML=x;
+}
+</script>
