--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -70,6 +70,7 @@
                     <div class="newfunc-list">支持随系统主题更改主题</div>
                     <div class="newfunc-title">Bugs：</div>
                     <div class="newfunc-list">在使用中文时文字显示可能会异常（已修复）</div>
+                    <div class="newfunc-list">组件错位（已修复）</div>
                     <div class="newfunc-list">托盘菜单提示错误显示（已修复）</div>
                     <div class="newfunc-list">进程管理关闭软件时即使按取消键也会关闭（已修复）</div>
                     <div class="newfunc-list">无法删除病毒文件（已修复）</div>
