--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -66,6 +66,7 @@
                     <div class="newfunc-list">全新选择文件夹窗口</div>
                     <div class="newfunc-list">全新杀毒页面</div>
                     <div class="newfunc-list">重构桌面扫描</div>
+                    <div class="newfunc-list">重构本地扫描（特征）</div>
                     <div class="newfunc-list">增强脚本查杀（借鉴PYAS）</div>
                     <div class="newfunc-list">支持随系统主题更改主题</div>
                     <div class="newfunc-title">Bugs：</div>
