--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -62,6 +62,7 @@
                     <div class="newfunc-list">主动防御终止进程增加提示</div>
                     <div class="newfunc-list">更新关闭软件窗口</div>
                     <div class="newfunc-list">更新图标</div>
+                    <div class="newfunc-list">新增高级设置（需特殊方法调出）</div>
                     <div class="newfunc-list">语言包新增信息</div>
                     <div class="newfunc-list">全新选择文件夹窗口</div>
                     <div class="newfunc-list">全新杀毒页面</div>
