--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -42,7 +42,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="down-btn"><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io/releases/download/v2.05/xdows.security.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
             </div>  
 
                     </div>
@@ -61,18 +61,30 @@
                 </div>
             </div>  
             
-            <!--<div class="down-ietm windows">
+            <div class="down-ietm windows">
                 <div class="down-ietm-inner">
                     <div class="logo-area">
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">广告</div>
-                        <div class="d-item-desc">关于我同学收买我要我打广告这件事 <span class="update-time"></span></div>
-                        <div class="down-btn"><a href="./Dev/advertised.html" onClick="tcssReport('tim.downloads.windows');">打开广告</a></div>
+                        <div class="d-item-title">备用链接</div>
+                        <div class="d-item-desc">如果第一个打开慢请点击此链接 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://www.123pan.com/s/1y1qVv-Vs0Y.html" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>
                 </div>
-            </div>  -->
+            </div> 
+           <div class="down-ietm windows">
+                <div class="down-ietm-inner">
+                    <div class="logo-area">
+                        <div class="itemlogo"></div>
+                    </div>
+                    <div class="info-area">
+                        <div class="d-item-title">反馈</div>
+                        <div class="d-item-desc">反馈建议或者Bug <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="https://forms.office.com/r/AHvLFmCYB7" onClick="tcssReport('tim.downloads.windows');">反馈</a></div>
+                    </div>
+                </div>
+            </div> 
             </div>
         </div>
     </div>
