--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -363,10 +363,10 @@
                         <div class="newfunc-list">支持使用360</div>
                         <div class="newfunc-list">工具箱、设置界面修改</div>
                         <div class="newfunc-title">Bugs：</div>
-                        <div class="newfunc-title">安全设置打不开（已修复）</div>
-                        <div class="newfunc-title">查杀时有时会报错（未修复）</div>
-                        <div class="newfunc-title">托盘菜单打开错误（已修复）</div>
-                        <div class="newfunc-title">程序在某些系统中乱码（未修复）</div>
+                        <div class="newfunc-list">安全设置打不开（已修复）</div>
+                        <div class="newfunc-list">查杀时有时会报错（未修复）</div>
+                        <div class="newfunc-list">托盘菜单打开错误（已修复）</div>
+                        <div class="newfunc-list">程序在某些系统中乱码（未修复）</div>
                     </div>
                 </div>
             </div>
