--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -33,24 +33,70 @@
             </div>
         </div>
     </div>
-    <div class="d-item-title">2.0-2.99版本</div>
-    <div class="d-item-desc">终止日期2024年7月14日<span class="update-time"></span></div>
-    <div class="d-item-desc">还未停止支持<span class="update-time"></span></div>
-    <div class="d-item-title">1.0-1.53版本</div>
-    <div class="d-item-desc">终止日期2023年7月28日<span class="update-time"></span></div>
-    <div class="d-item-desc">已经停止支持<span class="update-time"></span></div>
-    <div class="d-item-title">终止支持意味着什么</div>
-    <div class="d-item-desc">1、相关网页会无法访问<span class="update-time"></span></div>
-    <div class="d-item-desc">2、无法反馈问题<span class="update-time"></span></div>
-    <div class="d-item-desc">3、可能扫描服务器已经下线<span class="update-time"></span></div>
-    <div class="d-item-desc">4、让设备更易受到攻击<span class="update-time"></span></div>
-    <div class="d-item-desc">5、问题解答服务无法使用<span class="update-time"></span></div>
-    <div class="d-item-desc">6、每一次运行软件都会弹窗提示更新<span class="update-time"></span></div>
-    <div class="d-item-title">我可以干什么</div>
-    <div class="d-item-desc">1、更新至新版本（推荐）<span class="update-time"></span></div>
-    <div class="d-item-desc">2、手动设置防护（不推荐）<span class="update-time"></span></div>
-    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer"> <div class="d-item-desc">3、使用PYAS提供防护（如果你想），点击进入PYAS官网<span class="update-time"></span></div></a>
+            <div class="version-list">
 
+            <div class="version-item newest">
+                <div class="newversion">支持版本</div>
+                <div class="newfunc">
+                    <div class="newfunc-title">2.00-2.99</div>
+                    <div class="newfunc-list">终止日期2024年7月14日</div>
+                    <div class="newfunc-list">还未停止支持</div>
+                    <div class="newfunc-title">1.0-1.53</div>
+                    <div class="newfunc-list">终止日期2023年7月28日</div>
+                    <div class="newfunc-list">已经停止支持</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">常见问题</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">终止支持意味着什么<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：终止支持意味着什么</div>
+                    <div class="newfunc-list">答：1、相关网页会无法访问</div>
+                    <div class="newfunc-list">   2、无法反馈问题</div>
+                    <div class="newfunc-list">   3、可能扫描服务器已经下线</div>
+                    <div class="newfunc-list">   4、让设备更易受到攻击</div>
+                    <div class="newfunc-list">   5、支持服务无法使用</div>
+                    <div class="newfunc-title">问：我可以干什么</div>
+                    <div class="newfunc-list">答：1、更新至新版本（推荐）</div>
+                    <div class="newfunc-list">   2、手动设置防护（不推荐）</div>
+                    <a href="https://pyas.cf/" target="_blank" rel="noopener noreferrer"> <div class="newfunc-list">   3、使用PYAS提供防护（如果你想），点击进入PYAS官网<span class="update-time"></span></div></a>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">为什么xdows安全需要管理员权限<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：为什么xdows安全需要管理员权限</div>
+                    <div class="newfunc-list">答：对系统的防护需要比较高的权限来运行</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">使用时，遇到安全性提醒，该如何解决？ <span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：使用时，遇到安全性提醒，该如何解决？</div>
+                    <div class="newfunc-list">答：请确认是从官方网站下载，并点击继续执行即可。​</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">使用时，反应速度变慢，该如何解决<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newfunc-title">问：使用时，反应速度变慢，该如何解决</div>
+                    <div class="newfunc-list">答：请确保拥有 1GB 以上的内存，并尝试关闭其他影响性能的软件。​</div>
+                    </div>
+                </div>
+            </div>
     <div class="footer d-page">
         <p>反馈群：749412281</p>
         <p class="copy-right">Copyright © 2020-<script>document.write(new Date().getFullYear())</script> XTY64XTY. All Rights Reserved.  版权所有</p>
