--- a/xdows安全/Dev/support.html
+++ b/xdows安全/Dev/support.html
@@ -79,10 +79,10 @@
             </div>
             <div class="history-version-item">
                 <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">使用时，遇到安全性提醒，该如何解决？ <span class="arrow"></span></div>
+                <div class="history-version-item-title">使用时，遇到安全性提醒，该如何解决 <span class="arrow"></span></div>
                 <div class="history-version-item-content">
                     <div class="newfunc">
-                    <div class="newfunc-title">问：使用时，遇到安全性提醒，该如何解决？</div>
+                    <div class="newfunc-title">问：使用时，遇到安全性提醒，该如何解决</div>
                     <div class="newfunc-list">答：请确认是从官方网站下载，并点击继续执行即可。​</div>
                     </div>
                 </div>
