--- a/xdows安全/download.html
+++ b/xdows安全/download.html
@@ -42,7 +42,7 @@
                     <div class="info-area">
                         <div class="d-item-title">最新版本</div>
                         <div class="d-item-desc">支持 Windows 7 以上的设备</div>
-                        <div class="down-btn"><a href="https://github.com/XTY64XTY12345/XTY64XTY12345.github.io/releases/download/v2.05/xdows.security.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
+                        <div class="down-btn"><a href="./Dev/xdows安全.zip" onClick="tcssReport('tim.downloads.windows');">下载</a></div>
                     </div>  
                  </div>
              </div>  
