--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -58,6 +58,8 @@
                     <div class="newfunc-list">优化及增强主动防御</div>
                     <div class="newfunc-list">拆分进程防御程序</div>
                     <div class="newfunc-list">支持 Windows 7 系统</div>
+                    <div class="newfunc-list">全新更新系统</div>
+                    <div class="newfunc-list">新增卸载程序</div>
                     <div class="newfunc-list">进程管理增加右键菜单</div>
                     <div class="newfunc-list">主动防御终止进程增加提示</div>
                     <div class="newfunc-list">更新关闭软件窗口</div>
