--- a/xdows安全/Dev/Update.html
+++ b/xdows安全/Dev/Update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>2.05</title>
+    <title>2.06</title>
     <link rel="shortcut icon" href="./../img/logo.ico" >
     <link rel="stylesheet" href="./../css/public.css">
     <link rel="stylesheet" href="./../css/support.css">
@@ -13,46 +13,8 @@
         <div class="version-list">
 
             <div class="version-item newest">
-                <div class="newversion">最新版本 2.05</div>
+                <div class="newversion">最新版本 2.06</div>
                 <div class="newfunc">
-                    <div class="newfunc-title">新功能：</div>
-                    <div class="newfunc-list">选中按钮也会有悬停效果</div>
-                    <div class="newfunc-list">繁体中文</div>
-                    <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
-                    <div class="newfunc-list">文件粉碎</div>
-                    <div class="newfunc-list">全新关闭软件弹窗</div>
-                    <div class="newfunc-list">CPU占用优化</div>
-                    <div class="newfunc-list">更改快速扫描方式</div>
-                    <div class="newfunc-list">CPU占用管理</div>
-                    <div class="newfunc-list">MBR防护</div>
-                    <div class="newfunc-list">确定取消支持语言包</div>
-                    <div class="newfunc-list">脚本检测</div>
-                    <div class="newfunc-list">启动时重置杀毒设置</div>
-                    <div class="newfunc-list">后台扫描多线程</div>
-                    <div class="newfunc-list">部分组件支持unicode</div>
-                    <div class="newfunc-list">公用桌面后台扫描</div>
-                    <div class="newfunc-list">信息框支持深色模式</div>
-                    <div class="newfunc-list">修改UI布局</div>
-                    <div class="newfunc-list">升级信息框模块</div>
-                    <div class="newfunc-list">检测其它杀软的运行，如果检测到就会关闭主防，目前支持6款杀软</div>
-                    <div class="newfunc-list">由于网络库太容易误报，将改成“本地库”</div>
-                    <div class="newfunc-title">Bugs：</div>
-                    <div class="newfunc-list">在使用中文时文字显示可能会异常（修复一半）</div>
-                    <div class="newfunc-list">分配XXX字节内存失败（已修复）</div>
-                    <div class="newfunc-list">[紧急]病毒文件无法删除（已修复）</div>
-                    <div class="newfunc-list">多次显示同一个文件（已修复）</div>
-                    <div class="newfunc-list">使用任务管理器最大化（已修复）</div>
-                    <div class="newfunc-list">其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</div>
-                </div>
-            </div>
-            <div class="history-version">
-                <div class="history-version-title">其它版本</div>
-            </div>
-            <div class="history-version-item">
-                <div class="clickup">收起<span class="blue-up"></span></div>
-                <div class="history-version-item-title">2.06版本[正在开发]<span class="arrow"></span></div>
-                <div class="history-version-item-content">
-                    <div class="newfunc">
                     <div class="newversion">2.06</div>
                     <div class="newfunc-title">新功能：</div>
                     <div class="newfunc-list">优化及增强主动防御</div>
@@ -82,6 +44,58 @@
                     <div class="newfunc-title">注意事项：</div>
                     <div class="newfunc-list">由于语言包修改，请重新选择自己的语言</div>
                     <div class="newfunc-list">由于语言包修改，请替换配置文件</div>
+                </div>
+            </div>
+            <div class="history-version">
+                <div class="history-version-title">其它版本</div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.07版本[正在开发]<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.07</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">优化</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">已知问题（已修复）</div>
+                    </div>
+                </div>
+            </div>
+            <div class="history-version-item">
+                <div class="clickup">收起<span class="blue-up"></span></div>
+                <div class="history-version-item-title">2.05版本<span class="arrow"></span></div>
+                <div class="history-version-item-content">
+                    <div class="newfunc">
+                    <div class="newversion">2.05</div>
+                    <div class="newfunc-title">新功能：</div>
+                    <div class="newfunc-list">选中按钮也会有悬停效果</div>
+                    <div class="newfunc-list">繁体中文</div>
+                    <div class="newfunc-list">拖动窗口时半透明（抄袭PYAS[doge]）</div>
+                    <div class="newfunc-list">文件粉碎</div>
+                    <div class="newfunc-list">全新关闭软件弹窗</div>
+                    <div class="newfunc-list">CPU占用优化</div>
+                    <div class="newfunc-list">更改快速扫描方式</div>
+                    <div class="newfunc-list">CPU占用管理</div>
+                    <div class="newfunc-list">MBR防护</div>
+                    <div class="newfunc-list">确定取消支持语言包</div>
+                    <div class="newfunc-list">脚本检测</div>
+                    <div class="newfunc-list">启动时重置杀毒设置</div>
+                    <div class="newfunc-list">后台扫描多线程</div>
+                    <div class="newfunc-list">部分组件支持unicode</div>
+                    <div class="newfunc-list">公用桌面后台扫描</div>
+                    <div class="newfunc-list">信息框支持深色模式</div>
+                    <div class="newfunc-list">修改UI布局</div>
+                    <div class="newfunc-list">升级信息框模块</div>
+                    <div class="newfunc-list">检测其它杀软的运行，如果检测到就会关闭主防，目前支持6款杀软</div>
+                    <div class="newfunc-list">由于网络库太容易误报，将改成“本地库”</div>
+                    <div class="newfunc-title">Bugs：</div>
+                    <div class="newfunc-list">在使用中文时文字显示可能会异常（修复一半）</div>
+                    <div class="newfunc-list">分配XXX字节内存失败（已修复）</div>
+                    <div class="newfunc-list">[紧急]病毒文件无法删除（已修复）</div>
+                    <div class="newfunc-list">多次显示同一个文件（已修复）</div>
+                    <div class="newfunc-list">使用任务管理器最大化（已修复）</div>
+                    <div class="newfunc-list">其他杀软可能会一直拦截启动项（已修复，感谢 @Winner365 的反馈）</div>
                     </div>
                 </div>
             </div>
