--- a/xdows安全/Dev/advertised.html
+++ b/xdows安全/Dev/advertised.html
@@ -40,13 +40,13 @@
                         <div class="itemlogo"></div>
                     </div>
                     <div class="info-area">
-                        <div class="d-item-title">游戏交流群</div>
-                        <div class="d-item-desc">一个专业的游戏交流群，支持Android、Apple、WIndows端的游戏</div>
-                        <div class="d-item-desc">群号：812015311</div>
-            </div>  
-
+                        <div class="d-item-title">注意事项</div>
+                        <div class="d-item-desc">1.0-1.53都将停止支持 <span class="update-time"></span></div>
+                        <div class="d-item-desc">部分代码参考PYAS的代码 <span class="update-time"></span></div>
+                        <div class="down-btn"><a href="./Dev/support.html" onClick="tcssReport('tim.downloads.windows');">支持</a></div>
                     </div>
-   </div>  
+                </div>
+            </div>  
             <div class="down-ietm windows">
                 <div class="down-ietm-inner">
                     <div class="logo-area">
